# prep_for_meeting_example

./: README.md  pyproject.toml
src/prep_for_meeting_2/: crew.py  main.py
