[tool.poetry]
name = "prep_for_meeting_2"
version = "0.1.0"
description = "prep-for-meeting_2 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
prep_for_meeting_2 = "prep_for_meeting_2.main:run"
run_crew = "prep_for_meeting_2.main:run"
train = "prep_for_meeting_2.main:train"
replay = "prep_for_meeting_2.main:replay"
test = "prep_for_meeting_2.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
